# app/models/airtable/shots.rb
@@ -8,6 +8,7 @@ module Airtable
       bean_brand bean_type roast_date roast_level drink_tds drink_ey bean_notes espresso_notes private_notes
       fragrance aroma flavor aftertaste acidity bitterness sweetness mouthfeel
     ].index_by { it.to_s.humanize }
+    OUTBOUND_ONLY_FIELDS = %w[bean_notes espresso_notes private_notes].freeze
     FIELD_OPTIONS = {
       "espresso_enjoyment" => {type: "number", options: {precision: 0}},
       "duration" => {type: "duration", options: {durationFormat: "h:mm:ss.SS"}},
@@ -62,7 +63,13 @@ module Airtable
         fields["Coffee Bag"] = [shot.coffee_bag.airtable_id]
       end
 
-      STANDARD_FIELDS.each { |name, attribute| fields[name] = shot.public_send(attribute) }
+      STANDARD_FIELDS.each do |name, attribute|
+        fields[name] = if OUTBOUND_ONLY_FIELDS.include?(attribute)
+          shot.rich_text_plain_text(attribute)
+        else
+          shot.public_send(attribute)
+        end
+      end
       user.shot_metadata_fields.each { |field| fields[field] = shot.metadata[field].to_s }
       fields["Image"] = [{url: shot.image.url(disposition: "attachment"), filename: shot.image.filename.to_s}] if shot.image.attached?
       data = {fields: fields.compact}
@@ -71,7 +78,8 @@ module Airtable
     end
 
     def update_local_record(shot, record, updated_at)
-      shot.assign_attributes(record["fields"].slice(*STANDARD_FIELDS.keys).transform_keys { |k| STANDARD_FIELDS[k] })
+      inbound_fields = STANDARD_FIELDS.reject { |_name, attribute| OUTBOUND_ONLY_FIELDS.include?(attribute) }
+      shot.assign_attributes(record["fields"].slice(*inbound_fields.keys).transform_keys { |k| inbound_fields[k] })
       shot.skip_airtable_sync = true
       shot.updated_at = updated_at
       shot.metadata = user.shot_metadata_fields.index_with { |f| record["fields"][f] }
